--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">WGHS Rock Climbing</h3>
         </div>
       </div>
       <div class="row">
@@ -183,65 +183,41 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/rcc.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
+                  <h4></h4>
+                  <h4 class="subheading">Practicing/Comps</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">Our team is very loose and not strict we don't have times we practice or anything manditory. We do have competions that you can go to around every other friday</p>
+                    <p>Source:<a href="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwji_9KUp7PmAhUQ7qwKHYc9AXwQjRx6BAgBEAQ&url=%2Furl%3Fsa%3Di%26source%3Dimages%26cd%3D%26ved%3D2ahUKEwiC8IWMp7PmAhUCLKwKHT68Ch4QjRx6BAgBEAQ%26url%3Dhttps%253A%252F%252Fclimbepic.com%252F%26psig%3DAOvVaw3MxzWyTya28DfVNkkL3MhQ%26ust%3D1576349884389337&psig=AOvVaw3MxzWyTya28DfVNkkL3MhQ&ust=1576349884389337">climbepic</a></p>
                 </div>
               </div>
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/Rock-Climbing-Equipment.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
+                  <h4></h4>
+                  <h4 class="subheading">Membership/Gear</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">YOu will have to get your own membership for the gym, but we get a disocunt at upper limits gyms. Aswell you will have to ethier rent or buy your own equipment.</p>
+                    <p>Source:<a href="https://rockclimbeveryday.com/basic-rock-climbing-equipment/">Rock Climb Every Day</a></p>
                 </div>
               </div>
             </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
+
+
             <li class="timeline-inverted">
               <div class="timeline-image">
                 <h4>Be Part
                   <br>Of Our
-                  <br>Story!</h4>
+                  <br>Team!</h4>
               </div>
             </li>
           </ul>
@@ -489,7 +465,7 @@
                 <h2 class="text-uppercase">Ect.</h2>
                 <p class="item-intro text-muted">General info</p>
                 <img class="img-fluid d-block mx-auto" src="img/gear-laid-out-opt.jpg" alt="">
-                <p>Most places you can show up at any time and climb but if you want to climb with people the best thing is to go to maryland heights and go at 3-5pm</p>
+                <p>Most places you can show up at any time and climb but if you want to climb with people the best thing is to go to maryland heights and go at 3-5pm. Aswell you can ask people to go with you so you don't have to go alone.</p>
                 <ul class="list-inline">
                   <li>Source:<a href="https://fstoppers.com/video/shooting-location-video-interviews-and-rock-climbers-dslrs-3143">Fstoppers</a></li>
 
